# personalmanager

./: .coverage  .gitignore  CHANGELOG.md  CLAUDE.md  DEVELOPMENT_LOG.md  FEATURE_REQUEST_PROCESS.md  FUNCTION_INVENTORY.md  INSTALL_GUIDE.md  MASTER.md  NEXT.md  PERSONALMANAGER_INVESTIGATION_REPORT_20250915.md  PHASE_1_RELEASE_READINESS_REPORT.md  PROJECT_STATUS.md  PROJECT_STATUS_UPDATE_REPORT.md  PR_DESCRIPTION.md  PR_TRACK_B.md  QUICKSTART.md  README.md  RELEASE_ANNOUNCEMENT_v0.2.0-alpha.md  RELEASE_CHECKLIST.md  REQUIREMENT_TRIAGE.md  SECURITY_PATCHES.md  SPRINT3_FINAL_VERIFICATION.md  TEST_COMPLETION_REPORT.md  api_test_results.json  claude-integrator-verification.md  config-changes-report.md  debug_oauth_state.py  install.sh  installation_verification_20250914_172152.md  multi-device-sync-requirements.md  pyproject.toml  resource_analysis.py  run_api_tests.py  run_security.py  security_completion_report.json  start_interactive.sh  stress_test_final_report.md  tad  test_ai_whitelist_security.py  (+6 more)
.gemini/: pm-wrapper.sh
.obsidian/: workspace.json
.personalmanager/: config.yaml
.tad/: CHANGELOG.md  MCP_INTEGRATION_COMPLETE_REPORT.md  MCP_INTEGRATION_SUMMARY.md  MCP_USAGE_GUIDE.md  README.md  config.yaml  config.yaml.backup.v3.0.20251125_093925  manifest-v1.1.yaml  mcp-registry.yaml  project-detection.yaml
archived/: SBOM.json  T-OBS_completion.json  package_offline.sh  resource_analysis_results.json  rollback_install.sh  test_api_integration.py  test_slash.py  test_tool_debug.py  validate_sre.py
books/: Antifragile-综述.md  Atomic Habits-综述.md  Deep Work-综述.md  (+18 more)
(+467 files in other folders)
